test/error/iocheck/err4.rzy
// Error: query is not allowed to write state

component
  Err4
    input
      query():R{0,100};
    
    implementation hfsm(A)
    
    var
      a : R{0,100};
    
    entry
      a := 0;
    end
    
    state A
      function query():R{0,100}
        a := 42;
        return 0;
      end
    end
    
  end

